# bzlmodRio-choreolib

./: MODULE.bazel  README.md  WORKSPACE  maven_cpp_deps.bzl  maven_java_deps.bzl
.github/workflows/: auto_update.yml  build.yml  lint.yml  publish.yml
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  generate.py  get_choreolib_dependencies.py  get_version.py  publish.py  vendor_dep.json
libraries/cpp/choreolib-cpp/: BUILD.bazel
libraries/java/choreolib-java/: BUILD.bazel
libraries/tools/Choreo/: BUILD
libraries/tools/Choreo-CLI/: BUILD
libraries/tools/choreo/: BUILD
libraries/tools/choreo-cli/: BUILD
libraries/tools/choreo_cli/: BUILD
private/cpp/ChoreoLib-cpp/: BUILD.bazel  shared.BUILD.bazel
private/non_bzlmod_dependencies/: setup_dependencies.bzl
tests/: MODULE.bazel  WORKSPACE
tests/cpp/choreolib-cpp/: BUILD.bazel  main.cpp  test.cpp
tests/java/choreolibjava/: BUILD.bazel  BasicTest.java  Main.java
